# mempalace-v2

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
data/: entities.json  episodic_memory.jsonl  raw_sessions.jsonl  semantic_memory.jsonl  task_memory.jsonl  workspace_memory.jsonl
docs/: architecture-v2.md  openclaw-integration.md
examples/: openclaw_hook_example.md  pre_response_hook_payload.json  sample_session.json  session_end_hook_payload.json
mempalace-v2/: README.md  ROADMAP.md
schemas/: episodic_memory.schema.json  invalidation_record.schema.json  semantic_memory.schema.json  session_record.schema.json  task_memory.schema.json
src/mempalace_v2/: cli.py  models.py  sqlite_store.py  storage.py  utils.py
src/mempalace_v2/consolidation/: extractor.py  pipeline.py
src/mempalace_v2/ingestion/: memory_files.py  openclaw_sessions.py
src/mempalace_v2/integration/: hook_runner.py  openclaw_flow.py
src/mempalace_v2/retrieval/: assembler.py  query.py
tests/: test_consolidation.py  test_ingestion.py  test_integration.py
