[project]
name = "mempalace-v2"
version = "0.1.0"
description = "Persistent memory subsystem for OpenClaw"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mempalace_v2"]
